stop all services that are not in one of the SHUTDOWN_STAGES automatically

--- a/stage.conf
+++ b/stage.conf
@@ -15,7 +15,7 @@ COMMON_STAGE_DIR="/etc/stage/stages.d"
 BOOT_STAGES="essential mounts local"
 
 # Shutdown stages
-SHUTDOWN_STAGES="others local essential sys-kill mounts"
+SHUTDOWN_STAGES="local essential sys-kill mounts"
 
 # Reftab directory
 # --> remove
